[package]
name = "grovedb-costs"
version = "1.0.0-rc.1"
edition = "2024"
license = "MIT"
description = "Costs extension crate for GroveDB"
homepage = "https://www.grovedb.org/"
documentation = "https://docs.rs/grovedb-costs"
repository = "https://github.com/hellarcore/grovedb"


[dependencies]
thiserror = "1.0.30"
intmap = "2.0.0"
integer-encoding = "3.0.3"
