[package]
name = "grovedb-visualize"
version = "1.0.0-rc.1"
edition = "2024"
license = "MIT"
description = "Visualizer extension crate for GroveDB"
homepage = "https://www.grovedb.org/"
documentation = "https://docs.rs/grovedb-visualize"
repository = "https://github.com/hellarcore/grovedb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
itertools = "0.10.3"
